--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
+    "firebase": "^10.7.2",
     "framer-motion": "^10.16.16",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
