--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "styled-components": "^6.1.6"
   },
   "devDependencies": {
+    "@firebase/app": "^0.9.26",
+    "@firebase/auth": "^1.5.1",
+    "@types/firebase": "^3.2.1",
     "@types/md5": "^2.3.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.17",
