--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "firebase": "^10.7.2",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -26,7 +27,8 @@
     "react-router-dom": "^6.21.0",
     "redux": "^5.0.1",
     "sort-by": "^1.2.0",
-    "styled-components": "^6.1.6"
+    "styled-components": "^6.1.6",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@firebase/app": "^0.9.26",
